test/files/neg/macro-false-deprecation-warning.check
Impls_Macros_1.scala:5: error: illegal start of simple expression
}
^
1 error
